# vortex-server-python

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.admin  README.md  pyproject.toml
scripts/: install.bat  install.sh  seed-mongo.bat  seed-mongo.sh  seed_mongo.py  sim_nats_publisher.py  sim_ws_feed.py  start-admin.bat  start-admin.sh  start-all.bat  start-all.sh  start-server.bat  start-server.sh  start-sim-nats-publisher.bat  start-sim-nats-publisher.sh  start-sim-ws-feed.bat  start-sim-ws-feed.sh
tests/: conftest.py  test_backoff.py  test_consumer_tracking.py  test_metrics.py  test_nats_connector.py  test_registry.py  test_router.py
vortex/: __init__.py  health.py  perspective_handler.py  registry.py  router.py  server.py  status.py
vortex/admin/: __init__.py  app.py
vortex/admin/templates/: base.html  index.html  status.html  table_form.html  tables_list.html  transport_form.html  transports_list.html
vortex/config/: __init__.py  settings.py  table_config.py
vortex/connectors/: __init__.py  base.py  nats.py  solace.py  websocket_src.py
vortex/observability/: __init__.py  backoff.py  correlation.py  logging.py  metrics.py
vortex/store/: mongo.py
